--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: whateversauc3 
 description: >- # this means to ignore newlines until "baseurl:"
-        Another place to learn pwnage on the Internet
+        Another place to learn to pwn 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: whatever_sauce 
